--- a/References/references.bib
+++ b/References/references.bib
@@ -222,11 +222,24 @@
 	year = {2019}
 }
 
+@misc{design1,
+	author = {Umesha Anjani},
+	title = {Optimizing User Experience: Google Chrome and Top 7 Laws of UX},
+	howpublished = {\url{https://umeshabalasooriya.medium.com/optimizing-user-experience-google-chrome-and-top-7-laws-of-ux-7b6ec41e3116}}
+}
+
+@misc{design2,
+	author = {Interaction Design Foundation},
+	title = {User Interface Design Guidelines: 10 Rules of Thumb},
+	howpublished = {\url{https://www.interaction-design.org/literature/article/user-interface-design-guidelines-10-rules-of-thumb}}
+}
+
 @misc{bfsimg,
 	author = {Vaidehi Joshi},
 	title = {Breaking Down Breadth-First Search by Vaidehi Joshi - basecs - Medium},
 	howpublished = {\url{https://miro.medium.com/v2/resize:fit:1400/1*VM84VPcCQe0gSy44l9S5yA.jpeg}}
 }
+
 
 @article{badrelkari_2024_exploring,
 	author = {Badr Elkari and Loubna OURABAH and Hiba SEKKAT and Ayoub HSAINE and Chama ESSAIOUAD and Yassine BOUARGANE and Karim El Moutaouakil},
