--- a/Appendix2/appendix2.tex
+++ b/Appendix2/appendix2.tex
@@ -1,3 +1,5 @@
 %!TEX root = ../thesis.tex
 % ******************************* Thesis Appendix B ********************************
-\chapter{Complete final code in Python}
+\chapter{Github Commit History}
+
+In this appendix are the changes made at each iteration and sprint based on commit hashes. As you can see at the start of each iteration, commit hashes are defined: these correspond to the below changes in my code.
