--- a/Appendix2/appendix2.tex
+++ b/Appendix2/appendix2.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../thesis.tex
 % ******************************* Thesis Appendix B ********************************
-\chapter{Github Commit History}
+\chapter{Annotated prototypes}
 
-In this appendix are the changes made at each iteration and sprint based on commit hashes. As you can see at the start of each iteration, commit hashes are defined: these correspond to the below changes in my code.
+In this appendix are the prototypes made at each iteration and sprint, annotated by hand with justifications for decisions and code.
