--- a/Declaration/declaration.tex
+++ b/Declaration/declaration.tex
@@ -13,16 +13,22 @@ I have read and understood the Notice to Candidate. I certify that the work subm
 I declare that all stakeholder information is true and their own.
 \end{center}
 
+\begin{figure}[!htbp]
+	\centering
+	\includegraphics[width=0.3\linewidth]{Images/sigdad.png}
+	\caption{Signed Mr Minash Khambhaita}
+\end{figure}
+
 
 \begin{figure}[!htbp]
     \centering
-    \includegraphics[width=0.5\linewidth]{IMG_20241213_124653362.jpg}
+    \includegraphics[width=0.3\linewidth]{IMG_20241213_124653362.jpg}
     \caption{Signed Mr Ryan Slater}
 \end{figure}
 
 \begin{figure}[!htbp]
     \centering
-    \includegraphics[width=0.5\linewidth]{IMG_20241213_124653362~2.jpg}
+    \includegraphics[width=0.3\linewidth]{IMG_20241213_124653362~2.jpg}
     \caption{Signed Mr Alex Johnson}
 \end{figure}
 
