--- a/thesis.tex
+++ b/thesis.tex
@@ -15,7 +15,7 @@
 
 \lstdefinestyle{custompython}{
 	language=Python,
-	basicstyle=\ttfamily\footnotesize, % \small or \scriptsize if too wide
+	basicstyle=\ttfamily\tiny, % \small or \scriptsize if too wide
 	keywordstyle=\color{blue}\bfseries,
 	stringstyle=\color{orange},
 	commentstyle=\color{gray},
