--- a/Appendix1/appendix1.tex
+++ b/Appendix1/appendix1.tex
@@ -1,5 +1,3 @@
 %!TEX root = ../thesis.tex
 % ******************************* Thesis Appendix A ****************************
-\chapter{Flowcharts in Mermaid}
-
-This appendix is for the flowcharts used in the documentation. I used Mermaid, a flowchart programming language, to make my flowcharts clearer. Since the images in my documentation are screenshots, I have attached the code I used to create those flowcharts, which can be run on an online Mermaid editor: click {\href{https://mermaid.live}{here} for Mermaid Live. (https://mermaid.live)}
+\chapter{Final Program}
