--- a/Appendix2/appendix2.tex
+++ b/Appendix2/appendix2.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../thesis.tex
 % ******************************* Thesis Appendix B ********************************
-\chapter{Annotated prototypes}
+\chapter{GitHub Commit History}
 
 In this appendix are the prototypes made at each iteration and sprint, annotated by hand with justifications for decisions and code.
