--- a/thesis.tex
+++ b/thesis.tex
@@ -12,6 +12,8 @@
 \usepackage{longtable}
 \usepackage{svg}
 \usepackage{inconsolata} % Optional: Better monospace font
+\usepackage{pdfpages}
+
 
 \lstdefinestyle{custompython}{
 	language=Python,
