--- a/Appendix1/appendix1.tex
+++ b/Appendix1/appendix1.tex
@@ -1,3 +1,12 @@
 %!TEX root = ../thesis.tex
 % ******************************* Thesis Appendix A ****************************
 \chapter{Final Program}
+
+\section{gui.py}
+\lstinputlisting[style=custompython]{Code/FINAL/gui.py}
+\section{spa.py}
+\lstinputlisting[style=custompython]{Code/FINAL/spa.py}
+\section{config.py}
+\lstinputlisting[style=custompython]{Code/FINAL/config.py}
+\section{database.py}
+\lstinputlisting[style=custompython]{Code/FINAL/database.py}
