--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -3,7 +3,7 @@
 \begin{preface}      
 
 
-This project represents many months of dedication, learning, and passion for creating technology that solves real-world problems. As the son of a hard-working warehouse employee at Currys, I've witnessed first-hand the challenges faced by retail workers who navigate large stockrooms daily. Their efficiency directly impacts customer satisfaction, yet the tools available to them often fall short of modern technological capabilities.
+This project represents many months of dedication, learning, and passion for creating technology that solves real-world problems. As the son of a hard-working warehouse employee at Currys, I've witnessed first-hand the challenges faced by retail workers who navigate large stockrooms daily. Their efficiency directly impacts customer satisfaction, yet the tools available to them often fall short.
 
 \textbf{}
 \newline
@@ -12,10 +12,6 @@ StockBot was born from these observations: a solution designed to optimise the s
 \textbf{}
 \newline
 This application has been proudly developed using open-source tools on Fedora, the leading edge of secure, accessible and transparent technology. From the Python language to the SQLite database system, every component of StockBot is built upon FOSS and using FOSS tools where possible.
-
-\textbf{}
-\newline
-This project demonstrates that even complex computational challenges can be addressed with relatively simple, elegant solutions when we take the time to thoroughly understand the problem space. The pathfinding algorithms employed here may not be revolutionary, but their application to the specific constraints of retail warehousing creates a tool that can meaningfully improve workplace efficiency and reduce physical strain for warehouse workers.
 
 \textbf{}
 \newline
